refactor: spotlessApply